# rust-scf-facefinder

./: .gitignore  Cargo.toml  README.md  build.sh
src/: config.rs  facefinder.rs  main.rs
test/: index.html
