[package]
name = "rust-scf-facefinder"
version = "1.0.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", default-features=false, features = ["json", "multipart", "rustls-tls"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1"
anyhow = "1.0.55"
once_cell = "1.9.0"
log = "0.4.0"
env_logger = "0.8.4"
base64 = "0.20.0-alpha.1"
serde = { version = "1", features = ["derive"] }
pico-detect = "0.4.1"
image = "0.23.14"
rand = "0.8.5"
rand_xorshift = "0.3.0"
nalgebra = "0.30.1"

[profile.release]
lto = true
opt-level = 'z'
codegen-units = 1
panic = 'abort'